# SpaceBits-services

./: .gitignore  README.md
functions/: makefile
functions/collectandstorenearearthobjects/: Cargo.toml
functions/collectandstorenearearthobjects/src/: main.rs
functions/getpeopleinspacedata/: Cargo.toml
functions/getpeopleinspacedata/src/: main.rs
functions/readnearearthobjects/: Cargo.toml
functions/readnearearthobjects/src/: main.rs
functions/readpeople/: Cargo.toml  readme.md
functions/readpeople/src/: main.rs
functions/readpeopleinspace/: Cargo.toml
functions/readpeopleinspace/src/: main.rs
functions/readupcominglaunches/: Cargo.toml  makefile
functions/readupcominglaunches/src/: main.rs
functions/retrievenearearthobjects/: Cargo.toml
functions/retrievenearearthobjects/src/: main.rs
functions/scrape-nasa-astronauts/: Cargo.toml
functions/scrape-nasa-astronauts/src/: main.rs
infra/: .editorconfig  package-lock.json  package.json  pnpm-lock.yaml
infra/cdk.out/: InfraStack.assets.json  InfraStack.template.json  manifest.json  tree.json
infra/lib/: infra-stack.ts
infra/lib/api/: api.ts
infra/lib/functions/: functions.ts
infra/lib/iam/: iam.ts
readpeopleinspace/: Cargo.toml
readpeopleinspace/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/apimodels/: mod.rs
shared/src/persistencemodels/: mod.rs
