[package]
name = "readpeopleinspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
lambda_runtime = "0.6.1"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-lambda = "0.24.0"
serde = { version = "1.0.152", features = ["full"] }
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
