[package]
name = "readnearearthobjects"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["native-tls-vendored"] }
lambda_http = "0.8"
lambda_runtime = "0.8"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
log = "0.4"
simple_logger = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.30"
aws-sdk-ssm = "0.30"
aws-smithy-http = "0.56"
bytes = "1.0"
chrono = "0.4.30"
shared = { path = "../../shared/", features = ["default"] }
