[package]
name = "getpeopleinspacedata"
version = "0.1.0"
edition = "2021"

[dependencies]

lambda_runtime = "0.7"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
shared = { path = "../../shared" }
serde_json = "1.0.95"
chrono = "0.4.24"
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.1"
aws-sdk-ssm = "0.25.1"
simple_logger = "4.1.0"
log = "0.4.17"
lambda_http = "0.7.3"
