[package]
name = "readpeople"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.7"
lambda_runtime = "0.7"
serde = "1.0.152"
serde_json = "1.0.72"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
aws-sdk-s3control = "0.24.0"
aws-sdk-s3 = "0.24.0"
aws-config = "0.54.1"
log = "0.4.14"
simple_logger = "4.0.0"
