[package]
name = "retrievenearearthobjects"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.7"
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = "1.0"
serde_json = "1.0"
aws-sdk-s3control = "0.25.0"
aws-sdk-s3 = "0.25"
aws-config = "0.55"
log = "0.4"
simple_logger = "4.1"
shared = { path = "../../shared/" }